# ex1.1

./: .gitignore  CMakeLists.txt  README.md
include/: Widget.hpp
lib/: Widget.cpp
src/: benchmark.cpp
tests/: CMakeLists.txt  TestA_rref.cpp  TestB_lref.cpp  TestC_value.cpp  testasserts.hpp
